--- a/index.html
+++ b/index.html
@@ -65,8 +65,128 @@
       <a href="#main"><span>컨텐츠 바로가기</span></a>
     </div>
     <div class="wrap">
-      <div class="slide_wrap">
-        <div class="swiper slide_intro">
+      <!-- <div class="slide_wrap"> -->
+      <div class="slide-intro">
+        <div
+          id="image-carousel"
+          class="splide main_slide"
+          aria-label="Mainbnr Images"
+        >
+          <div class="splide__track">
+            <ul class="splide__list">
+              <li class="splide__slide">
+                <a href="#">
+                  <img
+                    src="./images/main/main_bnrCraviti.jpg"
+                    alt="CRAVITY 6TH MINI ALBUM SUN SEEKER"
+                  />
+                  <div class="slide__txt">
+                    <strong
+                      >크래비티(CRAVITY) 6th Mini Album [SUN SEEKER]</strong
+                    >
+                    <p>지금 바로 만나보세요!</p>
+                  </div>
+                </a>
+              </li>
+              <li class="splide__slide">
+                <a href="#">
+                  <img src="./images/main/main_bnrNCT.jpg" alt="NCT 2023" />
+                  <div class="slide__txt">
+                    <strong>엔시티(NCT) 4th Album [Golden Age]</strong>
+                    <p>앨범 구매시 미공개 포토카드 증정!</p>
+                  </div>
+                </a>
+              </li>
+              <li class="splide__slide">
+                <a href="#">
+                  <img
+                    src="./images/main/main_bnrSejeong.jpg"
+                    alt="KIMSEHEONG"
+                  />
+                  <div class="slide__txt">
+                    <strong>김세정(KIMSEHEONG) 1st Album [문(門)]</strong>
+                    <p>팬사인회 이벤트! 오직 SOUNDWAVE에서만.</p>
+                  </div>
+                </a>
+              </li>
+              <li class="splide__slide">
+                <a href="#">
+                  <img
+                    src="./images/main/main_bnrVanner.jpg"
+                    alt="VENI VIDI VICI"
+                  />
+                  <div class="slide__txt">
+                    <strong
+                      >배너(VANNER) 1st Mini Album [VENI VIDI VICI]</strong
+                    >
+                    <p>LUCKY DRAW EVENT 영등포/온라인 한정수량!</p>
+                  </div>
+                </a>
+              </li>
+              <li class="splide__slide">
+                <a href="#">
+                  <img
+                    src="./images/main/main_bnrJHOP.jpg"
+                    alt="j-hope JACK in BOX HOPE Editon"
+                  />
+                  <div class="slide__txt">
+                    <strong
+                      >제이홉(j-hope) Solo Album <br />[Jack In The Box (Hope
+                      Editon)]</strong
+                    >
+                    <p>LUCKY DRAW EVENT 영등포/온라인 한정수량!</p>
+                  </div>
+                </a>
+              </li>
+              <li class="splide__slide">
+                <a href="#">
+                  <img
+                    src="./images/main/main_bnrNMIXX.jpg"
+                    alt="A Midsummer NMIXX's Dream NMIXX"
+                  />
+                  <div class="slide__txt">
+                    <strong
+                      >(엔믹스)NMIXX 3rd Single [A Midsummer NMIXX's
+                      Dream]</strong
+                    >
+                    <p>팬사인회 이벤트! 오직 SOUNDWAVE에서만.</p>
+                  </div>
+                </a>
+              </li>
+              <li class="splide__slide">
+                <a href="#">
+                  <img
+                    src="./images/main/main_bnrLoo.jpg"
+                    alt="Loossemble (루셈블) - 1st Mini Album [Loossemble] SPECIAL GIFT EVENT"
+                  />
+                  <div class="slide__txt">
+                    <strong
+                      >루셈블(Loossemble) 1st Mini Album [Loossemble]</strong
+                    >
+                    <p>앨범 구매시 미공개 포토카드 증정!</p>
+                  </div>
+                </a>
+              </li>
+              <li class="splide__slide">
+                <a href="#">
+                  <img
+                    src="./images/main/main_bnrP1.jpg"
+                    alt="PIH P1HARMONY HARMONY : ALL IN"
+                  />
+                  <div class="slide__txt">
+                    <strong
+                      >피원하모니(P1HARMONY) 6th Mini Album [HARMONY : ALL
+                      IN]</strong
+                    >
+                    <p>VIDEO CALL EVENT! 오직 SOUNDWAVE에서만.</p>
+                  </div>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- <div class="swiper slide_intro">
           <div class="swiper-wrapper">
             <div class="swiper-slide slide_main">
               <a href="#">
@@ -170,11 +290,9 @@
               </a>
             </div>
           </div>
-          <!-- <div class="swiper-button-next"></div>
-          <div class="swiper-button-prev"></div> -->
           <div class="swiper-pagination swiper_btnbar"></div>
-        </div>
-      </div>
+        </div> -->
+      <!-- </div> -->
       <main id="main">
         <section class="inner sec-event">
           <div class="event_reser_slide">
@@ -623,59 +741,63 @@
           </div>
         </section>
         <section class="sec-artist">
-          <h2 class="artist_tit">ARTIST</h2>
-          <div class="swiper artist_lst">
-            <div class="swiper-wrapper artistlst_wrap">
-              <div class="swiper-slide lst_star">
-                <a href="#">
-                  <img src="./images/main/artist_YN.jpg" alt="" />
-                </a>
-              </div>
-              <div class="swiper-slide lst_star">
-                <a href="#"
-                  ><img src="./images/main/artist_younite.jpg" alt=""
-                /></a>
-              </div>
-              <div class="swiper-slide lst_star">
-                <a href="#"
-                  ><img src="./images/main/artist_cravity.jpg" alt=""
-                /></a>
-              </div>
-              <div class="swiper-slide lst_star">
-                <a href="#"
-                  ><img src="./images/main/artist_kep1er.jpg" alt=""
-                /></a>
-              </div>
-              <div class="swiper-slide lst_star">
-                <a href="#"
-                  ><img src="./images/main/artist_twice.jpg" alt=""
-                /></a>
-              </div>
-              <!-- <ul class="artistlst_wrap">
-              <li class="lst_star">
-                <a href="#"><img src="./images/main/artist_YN.jpg" alt="" /></a>
-              </li>
-              <li class="lst_star">
-                <a href="#"
-                  ><img src="./images/main/artist_younite.jpg" alt=""
-                /></a>
-              </li>
-              <li class="lst_star">
-                <a href="#"
-                  ><img src="./images/main/artist_cravity.jpg" alt=""
-                /></a>
-              </li>
-              <li class="lst_star">
-                <a href="#"
-                  ><img src="./images/main/artist_kep1er.jpg" alt=""
-                /></a>
-              </li>
-              <li class="lst_star">
-                <a href="#"
-                  ><img src="./images/main/artist_twice.jpg" alt=""
-                /></a>
-              </li>
-            </ul> -->
+          <div class="inner artist_lst">
+            <h2 class="artist_tit">ARTIST</h2>
+            <div class="artist_images">
+              <ul class="artimg_wrap">
+                <li class="lst_star">
+                  <a href="#"
+                    ><img
+                      src="./images/main/artist_straykids.jpg"
+                      alt="스트레이키즈"
+                    />
+                    <p class="artist_name">STRAY KIDS</p>
+                  </a>
+                </li>
+                <li class="lst_star">
+                  <a href="#"
+                    ><img src="./images/main/artist_nmixx.jpg" alt="엔믹스" />
+                    <p class="artist_name">NMIXX</p></a
+                  >
+                </li>
+                <li class="lst_star">
+                  <a href="#"
+                    ><img
+                      src="./images/main/artist_seventeen.jpg"
+                      alt="세븐틴"
+                    />
+                    <p class="artist_name">SEVENTEEN</p>
+                  </a>
+                </li>
+                <li class="lst_star">
+                  <a href="#"
+                    ><img src="./images/main/artist_ive.jpg" alt="아이브" />
+                    <p class="artist_name">IVE</p>
+                  </a>
+                </li>
+                <li class="lst_star">
+                  <a href="#"
+                    ><img src="./images/main/artist_itzy.jpg" alt="있지" />
+                    <p class="artist_name">ITZY</p>
+                  </a>
+                </li>
+                <li class="lst_star">
+                  <a href="#"
+                    ><img
+                      src="./images/main/artist_newjeans.jpg"
+                      alt="뉴진스"
+                    />
+                    <p class="artist_name">NewJeans</p>
+                  </a>
+                </li>
+              </ul>
+              <a href="#" class="artist_more">
+                <p class="more_txt">전체보기</p>
+                <img
+                  src="./images/main/ni_arrow_v2.jpg"
+                  alt="왼쪽방향 화살표"
+                />
+              </a>
             </div>
           </div>
         </section>
