--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                   />
                   <div class="slide__txt">
                     <strong
-                      >(엔믹스)NMIXX 3rd Single [A Midsummer NMIXX's
+                      >엔믹스(NMIXX) 3rd Single [A Midsummer NMIXX's
                       Dream]</strong
                     >
                     <p>팬사인회 이벤트! 오직 SOUNDWAVE에서만.</p>
@@ -299,75 +299,6 @@
             <div class="swiper event_reser">
               <div class="reser_tit"><h2>예약음반</h2></div>
               <div class="swiper-wrapper slide_reser">
-                <div class="swiper-slide slide_sub">
-                  <a href="#">
-                    <img src="./images/main/reser_UNE.jpg" alt="The Lost Diary"
-                  /></a>
-                </div>
-                <div class="swiper-slide slide_sub">
-                  <a href="#">
-                    <img src="./images/main/reser_Aro.jpg" alt=""
-                  /></a>
-                </div>
-                <div class="swiper-slide slide_sub">
-                  <a href="#"
-                    ><img
-                      src="./images/main/reser_onewe.jpg"
-                      alt="2ND SPECIAL ALBUM [XOXO]"
-                  /></a>
-                </div>
-                <div class="swiper-slide slide_sub">
-                  <a href="#"
-                    ><img
-                      src="./images/main/reser_festa.jpg"
-                      alt="PURPLE KISS 1ST SINGLE ALBUM FESTA"
-                  /></a>
-                </div>
-                <div class="swiper-slide slide_sub">
-                  <a href="#"
-                    ><img
-                      src="./images/main/reser_TRENDZ.jpg"
-                      alt="TRENDZ POCAALBUM"
-                  /></a>
-                </div>
-                <div class="swiper-slide slide_sub">
-                  <a href="#"
-                    ><img src="./images/main/reser.trendz.jpg" alt="TRENDZ"
-                  /></a>
-                </div>
-                <div class="swiper-slide slide_sub">
-                  <a href="#"
-                    ><img src="./images/main/reser_key.jpg" alt=""
-                  /></a>
-                </div>
-                <div class="swiper-slide slide_sub">
-                  <a href="#"
-                    ><img
-                      src="./images/main/reser_dual.jpg"
-                      alt="The Rose DUAL DELUXE ALBUM PREVIEW PREORDER MOW <br> DAWM VERSION 177mm x 243mm <br> DUSK VERSION 177mm x 243mm"
-                  /></a>
-                </div>
-                <div class="swiper-slide slide_sub">
-                  <a href="#"
-                    ><img
-                      src="./images/main/reser_dual2.jpg"
-                      alt="The Rose DUAL DELUXE ALBUM PREVIEW PREORDER MOW <br> DAWM VERSION 177mm x 243mm <br> DUSK VERSION 177mm x 243mm"
-                  /></a>
-                </div>
-                <div class="swiper-slide slide_sub">
-                  <a href="#"
-                    ><img
-                      src="./images/main/reser.brave.jpg"
-                      alt="BRAVE CIRLS BEST ALBUM"
-                  /></a>
-                </div>
-                <div class="swiper-slide slide_sub">
-                  <a href="#"
-                    ><img
-                      src="./images/main/reser_yn.jpg"
-                      alt="The Breakup Archives2 이별일기2 yunb"
-                  /></a>
-                </div>
                 <div class="swiper-slide slide_sub">
                   <a href="#">
                     <img src="./images/main/reser_UNE.jpg" alt="The Lost Diary"
@@ -801,6 +732,14 @@
             </div>
           </div>
         </section>
+        <div class="togo_btn">
+          <button class="btn-g btn_top">
+            <img src="./images/comm/main_top.svg" alt="위로 가기" />
+          </button>
+          <button class="btn-g btn_bottom">
+            <img src="./images/comm/main_bottom.svg" alt="아래로 가기" />
+          </button>
+        </div>
       </main>
     </div>
   </body>
