--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     <div class="wrap">
       <!-- <div class="slide_wrap"> -->
       <div class="slide-intro">
+        <h2 class="blind">메인 이벤트 슬라이드</h2>
         <div
           id="image-carousel"
           class="splide main_slide"
@@ -301,141 +302,214 @@
               <div class="swiper-wrapper slide_reser">
                 <div class="swiper-slide slide_sub">
                   <a href="#">
-                    <img src="./images/main/reser_UNE.jpg" alt="The Lost Diary"
-                  /></a>
+                    <img
+                      src="./images/main/reser_UNE.jpg"
+                      alt="The Lost Diary"
+                    />
+                    <span class="blind">으네(UNE)-The Lost Diary</span>
+                  </a>
                 </div>
                 <div class="swiper-slide slide_sub">
                   <a href="#">
-                    <img src="./images/main/reser_Aro.jpg" alt=""
-                  /></a>
+                    <img src="./images/main/reser_Aro.jpg" alt="정아로" />
+                    <span class="blind">정아로-2nd EP[Remain]</span>
+                  </a>
                 </div>
                 <div class="swiper-slide slide_sub">
                   <a href="#"
                     ><img
                       src="./images/main/reser_onewe.jpg"
                       alt="2ND SPECIAL ALBUM [XOXO]"
-                  /></a>
+                    />
+                    <span class="blind">원위(ONEWE)-스페셜앨범[XOXO]</span>
+                  </a>
                 </div>
                 <div class="swiper-slide slide_sub">
                   <a href="#"
                     ><img
                       src="./images/main/reser_festa.jpg"
                       alt="PURPLE KISS 1ST SINGLE ALBUM FESTA"
-                  /></a>
+                    />
+                    <span class="blind">
+                      퍼플키스(PURPLE KISS)-싱글 1집[FESTA](Main Ver.)
+                    </span>
+                  </a>
                 </div>
                 <div class="swiper-slide slide_sub">
                   <a href="#"
                     ><img
                       src="./images/main/reser_TRENDZ.jpg"
                       alt="TRENDZ POCAALBUM"
-                  /></a>
+                    />
+                    <p class="blind">
+                      트렌드지(TRENDZ)-싱글 3집[STILL ON MY WAY]<br />(POCAALBUM)(2종세트)
+                    </p></a
+                  >
                 </div>
                 <div class="swiper-slide slide_sub">
                   <a href="#"
-                    ><img src="./images/main/reser.trendz.jpg" alt="TRENDZ"
-                  /></a>
+                    ><img src="./images/main/reser.trendz.jpg" alt="TRENDZ" />
+                    <span class="blind"
+                      >트렌드지(TRENDZ)-싱글 3집[STILL ON MY WAY]
+                    </span>
+                  </a>
                 </div>
                 <div class="swiper-slide slide_sub">
-                  <a href="#"
-                    ><img src="./images/main/reser_key.jpg" alt=""
-                  /></a>
+                  <a href="#">
+                    <img src="./images/main/reser_key.jpg" alt="" />
+                    <span class="blind"
+                      >키(KEY)-미니 2집[Good&Great](PhotoBook ver.)
+                    </span>
+                  </a>
                 </div>
                 <div class="swiper-slide slide_sub">
-                  <a href="#"
-                    ><img
+                  <a href="#">
+                    <img
                       src="./images/main/reser_dual.jpg"
                       alt="The Rose DUAL DELUXE ALBUM PREVIEW PREORDER MOW <br> DAWM VERSION 177mm x 243mm <br> DUSK VERSION 177mm x 243mm"
-                  /></a>
+                    />
+                    <span class="blind"
+                      >더 로즈(Teh Rose)-[DUAL(Deluxe Box Album)](2종세트)
+                    </span>
+                  </a>
                 </div>
                 <div class="swiper-slide slide_sub">
-                  <a href="#"
-                    ><img
+                  <a href="#">
+                    <img
                       src="./images/main/reser_dual2.jpg"
                       alt="The Rose DUAL DELUXE ALBUM PREVIEW PREORDER MOW <br> DAWM VERSION 177mm x 243mm <br> DUSK VERSION 177mm x 243mm"
-                  /></a>
+                    />
+                    <span class="blind"
+                      >더 로즈(Teh Rose)-[DUAL(Jewel Case Album)](2종세트)
+                    </span>
+                  </a>
                 </div>
                 <div class="swiper-slide slide_sub">
-                  <a href="#"
-                    ><img
+                  <a href="#">
+                    <img
                       src="./images/main/reser.brave.jpg"
                       alt="BRAVE CIRLS BEST ALBUM"
-                  /></a>
+                    />
+                    <p class="blind">
+                      브레이브걸스(Brave Girls)-[BRAVE GIRLS BEST ALBUM]
+                    </p>
+                  </a>
                 </div>
                 <div class="swiper-slide slide_sub">
                   <a href="#"
                     ><img
                       src="./images/main/reser_yn.jpg"
                       alt="The Breakup Archives2 이별일기2 yunb"
-                  /></a>
+                    />
+                    <p class="blind">
+                      윤비(YUNB)-정규 2집[The Breakup Archives 2](이별일기2)
+                    </p>
+                  </a>
                 </div>
                 <div class="swiper-slide slide_sub">
                   <a href="#">
-                    <img src="./images/main/reser_UNE.jpg" alt="The Lost Diary"
-                  /></a>
+                    <img
+                      src="./images/main/reser_UNE.jpg"
+                      alt="The Lost Diary"
+                    /><span class="blind">으네(UNE)-The Lost Diary</span></a
+                  >
                 </div>
                 <div class="swiper-slide slide_sub">
                   <a href="#">
-                    <img src="./images/main/reser_Aro.jpg" alt=""
-                  /></a>
+                    <img src="./images/main/reser_Aro.jpg" alt="" /><span
+                      class="blind"
+                      >정아로-2nd EP[Remain]</span
+                    ></a
+                  >
                 </div>
                 <div class="swiper-slide slide_sub">
                   <a href="#"
                     ><img
                       src="./images/main/reser_onewe.jpg"
                       alt="2ND SPECIAL ALBUM [XOXO]"
-                  /></a>
+                    /><span class="blind">원위(ONEWE)-스페셜앨범[XOXO]</span></a
+                  >
                 </div>
                 <div class="swiper-slide slide_sub">
                   <a href="#"
                     ><img
                       src="./images/main/reser_festa.jpg"
                       alt="PURPLE KISS 1ST SINGLE ALBUM FESTA"
-                  /></a>
+                    /><span class="blind">
+                      퍼플키스(PURPLE KISS)-싱글 1집[FESTA](Main Ver.)
+                    </span></a
+                  >
                 </div>
                 <div class="swiper-slide slide_sub">
                   <a href="#"
                     ><img
                       src="./images/main/reser_TRENDZ.jpg"
                       alt="TRENDZ POCAALBUM"
-                  /></a>
+                    />
+                    <p class="blind">
+                      트렌드지(TRENDZ)-싱글 3집[STILL ON MY WAY]<br />(POCAALBUM)(2종세트)
+                    </p>
+                  </a>
                 </div>
                 <div class="swiper-slide slide_sub">
                   <a href="#"
-                    ><img src="./images/main/reser.trendz.jpg" alt="TRENDZ"
-                  /></a>
+                    ><img
+                      src="./images/main/reser.trendz.jpg"
+                      alt="TRENDZ"
+                    /><span class="blind"
+                      >트렌드지(TRENDZ)-싱글 3집[STILL ON MY WAY]
+                    </span>
+                  </a>
                 </div>
                 <div class="swiper-slide slide_sub">
                   <a href="#"
-                    ><img src="./images/main/reser_key.jpg" alt=""
-                  /></a>
+                    ><img src="./images/main/reser_key.jpg" alt="" />
+                    <span class="blind"
+                      >키(KEY)-미니 2집[Good&Great](PhotoBook ver.)
+                    </span>
+                  </a>
                 </div>
                 <div class="swiper-slide slide_sub">
                   <a href="#"
                     ><img
                       src="./images/main/reser_dual.jpg"
                       alt="The Rose DUAL DELUXE ALBUM PREVIEW PREORDER MOW <br> DAWM VERSION 177mm x 243mm <br> DUSK VERSION 177mm x 243mm"
-                  /></a>
+                    /><span class="blind"
+                      >더 로즈(Teh Rose)-[DUAL(Deluxe Box Album)](2종세트)
+                    </span>
+                  </a>
                 </div>
                 <div class="swiper-slide slide_sub">
                   <a href="#"
                     ><img
                       src="./images/main/reser_dual2.jpg"
                       alt="The Rose DUAL DELUXE ALBUM PREVIEW PREORDER MOW <br> DAWM VERSION 177mm x 243mm <br> DUSK VERSION 177mm x 243mm"
-                  /></a>
+                    /><span class="blind"
+                      >더 로즈(Teh Rose)-[DUAL(Jewel Case Album)](2종세트)
+                    </span>
+                  </a>
                 </div>
                 <div class="swiper-slide slide_sub">
                   <a href="#"
                     ><img
                       src="./images/main/reser.brave.jpg"
                       alt="BRAVE CIRLS BEST ALBUM"
-                  /></a>
+                    />
+                    <p class="blind">
+                      브레이브걸스(Brave Girls)-[BRAVE GIRLS BEST ALBUM]
+                    </p>
+                  </a>
                 </div>
                 <div class="swiper-slide slide_sub">
                   <a href="#"
                     ><img
                       src="./images/main/reser_yn.jpg"
                       alt="The Breakup Archives2 이별일기2 yunb"
-                  /></a>
+                    />
+                    <p class="blind">
+                      윤비(YUNB)-정규 2집[The Breakup Archives 2](이별일기2)
+                    </p>
+                  </a>
                 </div>
               </div>
               <div class="swiper-scrollbar"></div>
@@ -446,7 +520,7 @@
           <div class="inner feed_lst">
             <div class="feed_cont_chart">
               <h2 class="chart_tit">사운드웨이브 차트</h2>
-              <ul class="feed_chart_lst">
+              <ol class="feed_chart_lst">
                 <li class="chart_number">
                   <a href="#">
                     <span class="chart_number_thumb">1 </span>
@@ -529,7 +603,7 @@
                     </p>
                   </a>
                 </li>
-              </ul>
+              </ol>
               <a href="#" class="chrat_more">
                 <p class="more_txt">더보기</p>
                 <img src="./images/main/chart_plus.png" alt="+모양" />
@@ -560,6 +634,7 @@
               </ul>
             </div>
             <div class="mainitem_cont">
+              <h3 class="blind">국내</h3>
               <ul class="mainitem_images">
                 <li class="item_images">
                   <a href="#">
@@ -567,6 +642,10 @@
                       src="./images/main/mainitem_nssign.jpg"
                       alt="BIRTH OF COSMO Nemo Album Full Ver. nSSign"
                     />
+                    <p class="blind">
+                      n.SSign(엔싸인)-BIRTH OF COSMO(Nemo Album Full
+                      ver.)(한정판)(랜덤)
+                    </p>
                   </a>
                 </li>
                 <li class="item_images">
@@ -574,26 +653,38 @@
                     ><img
                       src="./images/main/mainitem_onewe.jpg"
                       alt="2ND SPECIAL ALBUM [XOXO] onewe"
-                  /></a>
+                    /><span class="blind">원위(ONEWE)-스페셜앨범[XOXO]</span>
+                  </a>
                 </li>
                 <li class="item_images">
                   <a href="#"
                     ><img
                       src="./images/main/mainitem_festa.jpg"
                       alt="PURPLE K!SS 1ST SINGLE ALBUM FeSTA"
-                  /></a>
+                    />
+                    <span class="blind">
+                      퍼플키스(PURPLE KISS)-싱글 1집[FESTA](POCA ALBUM)
+                    </span>
+                  </a>
                 </li>
                 <li class="item_images">
                   <a href="#"
                     ><img
                       src="./images/main/mainitem_trendz.jpg"
                       alt="TRENDZ 3rd Single Album 'STILL ON MY WAY"
-                  /></a>
+                    />
+                    <span class="blind"
+                      >트렌드지(TRENDZ)-싱글 3집[STILL ON MY WAY]
+                    </span>
+                  </a>
                 </li>
                 <li class="item_images">
                   <a href="#"
-                    ><img src="./images/main/mainitem_key.jpg" alt="key"
-                  /></a>
+                    ><img src="./images/main/mainitem_key.jpg" alt="key" />
+                    <span class="blind"
+                      >키(KEY)-미니 2집[Good&Great](PhotoBook ver.)
+                    </span>
+                  </a>
                 </li>
               </ul>
             </div>
@@ -617,52 +708,90 @@
                   ><img
                     src="./images/main/goods_treasure.jpg"
                     alt="3rd ANNIVERSARY MAGAZINE"
-                /></a>
+                  />
+                  <span class="blind"
+                    >트레저(TREASURE)-[3rd ANNIVERSARY MAGAZINE]
+                  </span>
+                </a>
               </li>
               <li class="goods_images">
                 <a href="#"
-                  ><img src="./images/main/goods_ive1.jpg" alt="포토카드 홀더"
-                /></a>
+                  ><img
+                    src="./images/main/goods_ive1.jpg"
+                    alt="포토카드 홀더"
+                  />
+                  <p class="blind">
+                    미니브(MINIVE)[MINIVE PARK]OFFICIAL MD-포토카드 홀더
+                    PHOTOCARD HOLDER
+                  </p>
+                </a>
               </li>
               <li class="goods_images">
                 <a href="#"
                   ><img
                     src="./images/main/goods_ive2.jpg"
                     alt="포토카드 바인더"
-                /></a>
+                  />
+                  <p class="blind">
+                    미니브(MINIVE)[MINIVE PARK]OFFICIAL MD-포토카드 바인더
+                    PHOTOCARD BINDER
+                  </p>
+                </a>
               </li>
               <li class="goods_images">
                 <a href="#"
                   ><img
                     src="./images/main/goods_kimhyeyoon.jpg"
                     alt="친필 사인 엽서 3종 중 1종 랜덤 증정"
-                /></a>
+                  />
+                  <p class="blind">
+                    김혜윤(Kim Hye Yoon)[HYE-PPY DAY]Official MD-MD 세트 MD SET
+                    <br />친필 사인 엽서 3종 중 1종 랜덤 증정
+                  </p>
+                </a>
               </li>
               <li class="goods_images">
                 <a href="#"
                   ><img
                     src="./images/main/goods_joohoney.jpg"
                     alt="만랭이 미니 인형"
-                /></a>
+                  />
+                  <p class="blind">
+                    주헌(JOOHONEY)[MANRANGYI]OFFICIAL MD-만랭이 미니 인형
+                    MANRANGYI MINI DOLL
+                  </p>
+                </a>
               </li>
               <li class="goods_images">
                 <a href="#"
                   ><img
                     src="./images/main/goods_phantom.jpg"
                     alt="팬텀싱어 CONCERT CONCERT OFFICIAL MD"
-                /></a>
+                  />
+                  <p class="blind">
+                    팬텀싱어 4(PHANTOM SINGER 4)OFFICIAL MD-아크릴 응원봉
+                    ACRYLIC LIGHT STICK
+                  </p>
+                </a>
               </li>
               <li class="goods_images">
                 <a href="#"
                   ><img
                     src="./images/main/goods_vanner.jpg"
                     alt="OFFICIAL MD VANNER ACRYLIC LIFHT STICK"
-                /></a>
+                  />
+                  <span class="blind">
+                    배너(VANNER) OFFICIAL MD-응원봉 OFFICIAL LIGHT STICK
+                  </span>
+                </a>
               </li>
               <li class="goods_images">
                 <a href="#"
-                  ><img src="./images/main/goods-mirae.jpg" alt="mirae"
-                /></a>
+                  ><img src="./images/main/goods-mirae.jpg" alt="mirae" />
+                  <span class="blind">
+                    미래소년(MIRAE)-응원봉 ACRYLIC LIGHT STICK
+                  </span>
+                </a>
               </li>
             </ul>
             <a href="#" class="goods_more">
