--- a/index.html
+++ b/index.html
@@ -606,7 +606,6 @@
               </ol>
               <a href="#" class="chrat_more">
                 <p class="more_txt">더보기</p>
-                <img src="./images/main/chart_plus.png" alt="+모양" />
               </a>
             </div>
             <div class="feed_cont_video">
@@ -628,7 +627,7 @@
               <h2 class="mainitem_tit">CD · DVD</h2>
               <ul class="mainitem_tit_mini">
                 <li class="mini_txt"><a href="#">국내</a></li>
-                <li class="mini_txt"><a href="#">팝</a></li>
+                <li class="mini_txt"><a href="#">POP</a></li>
                 <li class="mini_txt"><a href="#">클래식</a></li>
                 <li class="mini_txt"><a href="#">DVD</a></li>
               </ul>
@@ -637,27 +636,48 @@
               <h3 class="blind">국내</h3>
               <ul class="mainitem_images">
                 <li class="item_images">
-                  <a href="#">
+                  <a href="#" class="itemtogo">
                     <img
                       src="./images/main/mainitem_nssign.jpg"
                       alt="BIRTH OF COSMO Nemo Album Full Ver. nSSign"
                     />
-                    <p class="blind">
-                      n.SSign(엔싸인)-BIRTH OF COSMO(Nemo Album Full
-                      ver.)(한정판)(랜덤)
-                    </p>
                   </a>
+                  <div class="item_oderbox">
+                    <div class="item_oderbox_txt">
+                      <span>
+                        <em class="item_oderbox_tit">n.SSign(엔싸인)</em>
+                        BIRTH OF COSMO<br />(Nemo Album Full ver.)(한정판)(랜덤)
+                      </span>
+                    </div>
+                    <ul class="item_oderbox_pay">
+                      <li class="itemlst item_paylst_sale">
+                        <span class="itempay item_pay_sale">₩ 11,100</span>
+                      </li>
+                      <li class="itemlst item_paylst_original">
+                        <span class="itempay item_pay_original">₩ 13,000</span>
+                      </li>
+                      <li class="itemlst item_paylst">
+                        <span class="itempay item_sale">15%</span>
+                      </li>
+                      <li class="itemlst item_paylst_cart">
+                        <a href="#" class="odertogo">
+                          <span class="blind">장바구니</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
                 </li>
                 <li class="item_images">
-                  <a href="#"
+                  <a href="#" class="itemtogo"
                     ><img
                       src="./images/main/mainitem_onewe.jpg"
                       alt="2ND SPECIAL ALBUM [XOXO] onewe"
-                    /><span class="blind">원위(ONEWE)-스페셜앨범[XOXO]</span>
+                    />
+                    <p>원위(ONEWE)-스페셜앨범[XOXO]</p>
                   </a>
                 </li>
                 <li class="item_images">
-                  <a href="#"
+                  <a href="#" class="itemtogo"
                     ><img
                       src="./images/main/mainitem_festa.jpg"
                       alt="PURPLE K!SS 1ST SINGLE ALBUM FeSTA"
@@ -668,7 +688,7 @@
                   </a>
                 </li>
                 <li class="item_images">
-                  <a href="#"
+                  <a href="#" class="itemtogo"
                     ><img
                       src="./images/main/mainitem_trendz.jpg"
                       alt="TRENDZ 3rd Single Album 'STILL ON MY WAY"
@@ -679,7 +699,7 @@
                   </a>
                 </li>
                 <li class="item_images">
-                  <a href="#"
+                  <a href="#" class="itemtogo"
                     ><img src="./images/main/mainitem_key.jpg" alt="key" />
                     <span class="blind"
                       >키(KEY)-미니 2집[Good&Great](PhotoBook ver.)
