--- a/index.html
+++ b/index.html
@@ -191,113 +191,6 @@
           </div>
         </div>
       </div>
-      <!-- <div class="swiper slide_intro">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide slide_main">
-              <a href="#">
-                <img
-                  src="./images/main/main_bnrCraviti.jpg"
-                  alt="CRAVITY 6TH MINI ALBUM SUN SEEKER"
-                />
-                <div class="swiper-slide__txt">
-                  <strong>크래비티(CRAVITY) 6th Mini Album [SUN SEEKER]</strong>
-                  <p>지금 바로 만나보세요!</p>
-                </div>
-              </a>
-            </div>
-            <div class="swiper-slide slide_main">
-              <a href="#">
-                <img src="./images/main/main_bnrNCT.jpg" alt="NCT 2023" />
-                <div class="swiper-slide__txt">
-                  <strong>엔시티(NCT) 4th Album [Golden Age]</strong>
-                  <p>앨범 구매시 미공개 포토카드 증정!</p>
-                </div>
-              </a>
-            </div>
-            <div class="swiper-slide slide_main">
-              <a href="#">
-                <img src="./images/main/main_bnrSejeong.jpg" alt="KIMSEHEONG" />
-                <div class="swiper-slide__txt">
-                  <strong>김세정(KIMSEHEONG) 1st Album [문(門)]</strong>
-                  <p>팬사인회 이벤트! 오직 SOUNDWAVE에서만.</p>
-                </div>
-              </a>
-            </div>
-            <div class="swiper-slide slide_main">
-              <a href="#">
-                <img
-                  src="./images/main/main_bnrVanner.jpg"
-                  alt="VENI VIDI VICI"
-                />
-                <div class="swiper-slide__txt">
-                  <strong>배너(VANNER) 1st Mini Album [VENI VIDI VICI]</strong>
-                  <p>LUCKY DRAW EVENT 영등포/온라인 한정수량!</p>
-                </div>
-              </a>
-            </div>
-            <div class="swiper-slide slide_main">
-              <a href="#">
-                <img
-                  src="./images/main/main_bnrJHOP.jpg"
-                  alt="j-hope JACK in BOX HOPE Editon"
-                />
-                <div class="swiper-slide__txt">
-                  <strong
-                    >제이홉(j-hope) Solo Album <br />[Jack In The Box (Hope
-                    Editon)]</strong
-                  >
-                  <p>LUCKY DRAW EVENT 영등포/온라인 한정수량!</p>
-                </div>
-              </a>
-            </div>
-            <div class="swiper-slide slide_main">
-              <a href="#">
-                <img
-                  src="./images/main/main_bnrNMIXX.jpg"
-                  alt="A Midsummer NMIXX's Dream NMIXX"
-                />
-                <div class="swiper-slide__txt">
-                  <strong
-                    >(엔믹스)NMIXX 3rd Single [A Midsummer NMIXX's
-                    Dream]</strong
-                  >
-                  <p>팬사인회 이벤트! 오직 SOUNDWAVE에서만.</p>
-                </div>
-              </a>
-            </div>
-            <div class="swiper-slide slide_main">
-              <a href="#">
-                <img
-                  src="./images/main/main_bnrLoo.jpg"
-                  alt="Loossemble (루셈블) - 1st Mini Album [Loossemble] SPECIAL GIFT EVENT"
-                />
-                <div class="swiper-slide__txt">
-                  <strong
-                    >루셈블(Loossemble) 1st Mini Album [Loossemble]</strong
-                  >
-                  <p>앨범 구매시 미공개 포토카드 증정!</p>
-                </div>
-              </a>
-            </div>
-            <div class="swiper-slide slide_main">
-              <a href="#">
-                <img
-                  src="./images/main/main_bnrP1.jpg"
-                  alt="PIH P1HARMONY HARMONY : ALL IN"
-                />
-                <div class="swiper-slide__txt">
-                  <strong
-                    >피원하모니(P1HARMONY) 6th Mini Album [HARMONY : ALL
-                    IN]</strong
-                  >
-                  <p>VIDEO CALL EVENT! 오직 SOUNDWAVE에서만.</p>
-                </div>
-              </a>
-            </div>
-          </div>
-          <div class="swiper-pagination swiper_btnbar"></div>
-        </div> -->
-      <!-- </div> -->
       <main id="main">
         <section class="inner sec-event">
           <div class="event_reser_slide">
@@ -1546,44 +1439,7 @@
           </div>
         </section>
         <section class="sec-artist">
-          <div class="artist_tit"><h2>ARTIST</h2></div>
-          <div class="swiper artist_images">
-            <div class="swiper-wrapper artimg_wrap">
-              <div class="swiper-slide lst_star">
-                <a href="#"
-                  ><img src="./images/main/artist_YN.jpg" alt="최예나" />
-                </a>
-                <span class="blind">최예나</span>
-              </div>
-              <div class="swiper-slide lst_star">
-                <a href="#"
-                  ><img src="./images/main/artist_cravity.jpg" alt="CRAVITY" />
-                </a>
-                <span class="blind">크래비티</span>
-              </div>
-              <div class="swiper-slide lst_star">
-                <a href="#"
-                  ><img src="./images/main/artist_kep1er.jpg" alt="CRAVITY" />
-                </a>
-                <span class="blind">케플러</span>
-              </div>
-              <div class="swiper-slide lst_star">
-                <a href="#"
-                  ><img src="./images/main/artist_twice.jpg" alt="CRAVITY" />
-                </a>
-                <span class="blind">트와이스</span>
-              </div>
-              <div class="swiper-slide lst_star">
-                <a href="#"
-                  ><img src="./images/main/artist_younite.jpg" alt="CRAVITY" />
-                </a>
-                <span class="blind">유나이트</span>
-              </div>
-            </div>
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
-          </div>
-          <!-- <div class="inner artist_lst">
+          <div class="inner artist_lst">
             <h2 class="artist_tit">ARTIST</h2>
             <div class="artist_images">
               <ul class="artimg_wrap">
@@ -1637,16 +1493,22 @@
                 <p class="more_txt">전체보기</p>
               </a>
             </div>
-          </div> -->
+          </div>
         </section>
         <div class="togo_btn">
-          <button class="btn-g btn_top">
+          <button
+            type="button"
+            onclick="$('html').animate({scrollTop : 0})"
+            class="btn-g btn_top"
+          >
             <span class="blind">위로 가기</span>
-            <img src="./images/comm/main_top.svg" alt="위로 가기" />
           </button>
-          <button class="btn-g btn_bottom">
+          <button
+            type="button"
+            onclick="$('html').animate({scrollTop : 4600})"
+            class="btn-g btn_bottom"
+          >
             <span class="blind">아래로 가기</span>
-            <img src="./images/comm/main_bottom.svg" alt="아래로 가기" />
           </button>
         </div>
       </main>
