--- a/index.html
+++ b/index.html
@@ -1328,7 +1328,7 @@
                 </ul>
               </div>
             </div>
-            <a href="#" class="mainitem_more"
+            <a href="/itemlist.html" class="mainitem_more"
               ><p class="more_txt">전체보기</p>
             </a>
           </div>
