--- a/itemlist.html
+++ b/itemlist.html
@@ -574,6 +574,7 @@
             </ul>
           </div>
           <div class="itemlst_number">
+            <span class="blind">페이지 숫자</span>
             <ol class="numberlist">
               <li class="numberlist_pagenate active">
                 <a href="javascript:void()" title="현재 페이지1">1</a>
@@ -594,12 +595,14 @@
             <div class="pagenate">
               <ul class="pagenate_emog">
                 <li class="pagenate_next">
-                  <span class="blind">다음</span>
-                  <a href="javascript:void()" class="nextpage"></a>
+                  <a href="javascript:void()" class="nextpage">
+                    <span class="blind">다음 페이지</span>
+                  </a>
                 </li>
                 <li class="pagenate_last">
-                  <span class="blind">끝</span>
-                  <a href="javascript:void()" class="lastpage"></a>
+                  <a href="javascript:void()" class="lastpage">
+                    <span class="blind">끝 페이지</span>
+                  </a>
                 </li>
               </ul>
             </div>
